[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Art/qmark.png" type="Texture" id=2]
[ext_resource path="res://NPC.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 96.0

[node name="NPC" type="Area2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_vertical_guides_": [ -176.0 ]
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.462745, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="QuestionMark" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_NPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_body_exited"]
